--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     "dev": "next",
     "build": "next build",
     "start": "next start"
+  },
+  "dependencies": {
+    "next": "^9.3.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
