--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "aws-sdk": "^2.644.0",
     "next": "^9.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
