--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "next build",
     "start": "next start"
   },
+  "prettier": {
+    "trailingComma": "all"
+  },
   "dependencies": {
     "aws-sdk": "^2.644.0",
     "next": "^9.3.1",
