--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "next": "^9.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.0.2"
   }
 }
