--- a/now.json
+++ b/now.json
@@ -3,6 +3,7 @@
     "EC2_ACCESS_KEY_ID": "@ec2-access-key-id",
     "EC2_SECRET_ACCESS_KEY": "@ec2-secret-access-key",
     "EC2_REGION": "@ec2-region",
-    "EC2_INSTANCE_ID": "@ec2-instance-id"
+    "EC2_INSTANCE_ID": "@ec2-instance-id",
+    "APP_PASSWORD": "@app-password"
   }
 }
