--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk": "^2.644.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.1",
+    "nookies": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
