--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.644.0",
+    "camelcase-keys": "^6.2.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.1",
     "react": "^16.13.1",
