--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "aws-sdk": "^2.644.0",
     "camelcase-keys": "^6.2.1",
+    "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.1",
     "nookies": "^2.2.0",
