--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie": "^0.4.0",
     "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
+    "lodash.pick": "^4.4.0",
     "next": "^9.3.1",
     "nookies": "^2.2.0",
     "react": "^16.13.1",
